# toposc-lab

./: .gitignore  .gitignore.txt  README.md  pyproject.toml
.streamlit/: config.toml
examples/: bhz_mass_scan.py  graphene_spectrum.py  haldane_chern.py  haldane_phase_diagram.py  haldane_spectrum.py  kitaev_disorder.py  kitaev_ladder.py  kitaev_mu_scan.py  plot_honeycomb_lattice.py  qwz_localization.py  qwz_mass_scan.py  run_kitaev_chain.py  save_haldane_study.py  ssh_localization.py  ssh_ratio_scan.py  ssh_scan.py
src/toposc_lab/: __main__.py  cli.py
src/toposc_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/toposc_lab/app/: __init__.py  model_guides.py  registry.py  streamlit_app.py  (+1 more)
tests/: test_bhz_model.py  test_cli.py  test_core_results.py  test_export.py  test_graphene_model.py  test_haldane_model.py  test_haldane_scan.py  test_honeycomb_lattice.py  test_kitaev_chain.py  test_kitaev_disorder.py  test_kitaev_ladder.py  test_kitaev_scan.py  test_ladder_lattice.py  test_lattice_localization_plots.py  test_lattice_model_integration.py  test_lattices.py  test_ldos.py  test_localization.py  test_localization_plots.py  test_matrix_plots.py  test_model_guides.py  test_model_registry.py  test_model_scan.py  test_model_symmetries.py  test_parameter_scan.py  test_plots.py  test_qwz_model.py  test_qwz_scan.py  test_ribbon_lattice.py  test_solver.py  test_spectrum_gaps.py  test_ssh_chain.py  test_ssh_scan.py  test_studies.py  test_study_physics.py  test_study_plots.py  test_study_workspace.py  test_symmetries.py  test_topology.py
(+42 files in other folders)
